# quatweb

./: .gitignore  Cargo.toml  FUNNY.md  README.md
src/: ext.rs  main.rs  post.rs  routes.rs  settings.rs  time.rs
www/content/posts/: obligatory_haha_new_website.md  portal_2_stuff.md
www/content/templates/: post.template.html  post_index.template.html  shell_begin.template.html  shell_end.template.html  tag.template.html
www/post/: cool.md  fix_it.md  how_2_angry_lex.md  spicy.md  we_out_here_reloadin.md
www/static/: rotator.css  stylin.css
www/template/: error.template.html  index.template.html  post.html  post.template.html  post_index.template.html  shell_begin.template.html  shell_end.template.html  tag.template.html
www/test/: funny.md
