[package]
name = "quatweb"
version = "0.1.0"
authors = ["quat1024 <quat1024@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
ramhorns = "0.10.2"
#pulldown-cmark= "0.8.0"