[package]
name = "quatweb"
version = "0.1.0"
authors = ["quat1024 <quat1024@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
ramhorns = "0.10.2"
pulldown-cmark= "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.6.4"
envy = "0.4"
chrono = "0.4.19"
thiserror = "1.0"
log = "0.4.0"
pretty_env_logger = "0.4.0"